--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 											</div>
 											<div class="col-sm-10">
 												<p>
-													Hello Everyone Monodey...
+													Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incid ut labore et dolore magna aliqua.... 
 												</p>
 											</div>
 										</div>
